css/style.css
*, *:hover {
    box-sizing: border-box;
}

html {
    margin: 0px;
    padding: 0px;
    font-family: Raleway, sans-serif;
    scroll-behavior: smooth;
}

body {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 0px;
}

h1, h2, h3{
    font-weight: 700;
}

h1 {
    font-size: 22px;
}

h2 {
    font-size: 20px;
}

h3 {
    font-size: 17px;
}

p {
    display: inline-block;
    font-size: 16px;
    margin-top: 5px;
    margin-bottom: 5px;
    vertical-align: middle;
}

ul {
    display: flex;
    margin: 0px;
    height: 100%;
    padding: 0px;
}

li {
    list-style: none;
    display: flex;
    font-size: 16px;
}

a, a:hover, a:visited {
    display: flex;
    align-items: center;
    margin: 0;
    padding: 0;
    text-decoration: none;
    color: black;
}

.background-grey {
    background-color: #F2F2F2;
}

.background-blue {
    color: #DEEBFF;
    font-size: 50px;
    margin-left: -5px;
}

.color-grey {
    color: #F2F2F2;
}

/* 
* 
*  HEADER
*
*/

header {
    margin: 0 3% 0 3%;
    padding: 0px;
    height: 120px;
    width: auto;
    display: flex;
    justify-content: space-between;
    align-content: center;
}

#logo {
    display: flex;
    height: 50px;
    margin: 45px 0 auto 15px;
}

nav {
    display: block;
    align-content: center;
    justify-content: center;
    padding: 0px;
    margin: 0px;
    height: 100%;
    width: 300px;
}

nav a {
    justify-content: center;
    width: 100%;
    height: 100%;
}

nav a:hover {
    color: #0065FC;
}

nav li {
    justify-content: center;
    align-content: center;
    height: auto;
    width: 100%;
    border-top: 2px white solid;
    padding: 0;
}

nav li:hover {
    border-top: 2px #0065FC solid;
}

/* 
* 
*  MAIN
*
*/

main {
    display: flex;
    flex-direction: column;
    margin-left: 3%;
    margin-right: 3%;
}

section {
    display: flex;
    flex-direction: column;
    border-radius: 20px;
}

/*
*  SEARCH
*/

.search {
    padding-left: 5px;
    margin-bottom: 40px;
}

.search-title {
    margin-top: 10px;
    margin-bottom: 6px;
}

form {
    display: flex;
    justify-content: flex-start;
    height: 54px;
    padding: 0;
    margin-top: 16px;
    margin-bottom: 20px;
}

.fa-map-marker-alt {
    padding: 17px 18px 19px 18px;
    font-size: 18px;
    border: 1px solid #F2F2F2;
    border-radius: 15px 0 0 15px;
}

.search-input {
    height: 100%;
    font-size: 16px;
    font-weight: bold;
    padding: 15px;
    margin-left: -2px;
    border: 2px solid #F2F2F2;
}

.search-btn {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    font-size: 16px;
    font-weight: bold;
    background-color: #0065FC;
    border: 1px solid #0065FC;
    color: white;
    padding-left: 18px;
    padding-right: 18px;
    margin-left: -2px;
    border-radius: 0 15px 15px 0;
}

i.search-btn-icon {
    display: none;
}

.search-btn:hover {
    cursor: pointer;
}

.filter {
    display: flex;
    align-items: center;
    width: 100%;
    margin-bottom: 38px;
}

.filter ul {
    flex-wrap: wrap;
}

.filter-text {
    margin: 0 15px 0 15px;
}

li.filter-btn {
    display: flex;
    position: relative;
    align-items: center;
    height: 50px;
    margin: 10px 0 10px 25px;
    border: 3px solid #F2F2F2;
    border-radius: 40px;
    cursor: pointer;
    z-index: 1;
}

li.filter-btn::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    margin-left: -3px;
    background: #DEEBFF;
    border: 3px solid #DEEBFF;
    border-radius: 40px;
    transform: scaleX(0);
    transform-origin: 20px;
    z-index: -1;
    transition: all 300ms ease-in-out;
}

li.filter-btn:hover::after {
    transform: scaleX(1);
}

.filter-icone {
    color: #0065FC;
    font-size: 18px;
}

.search-i {
    display: flex;
    align-items: center;
}

.fa-info {
    color: #0065FC;
    font-size: 12px;
}

.info-icon {
    margin-right: -15px;
}

.color-grey.fa-star {
    color: #F2F2F2;
}

/*
*  CENTER
*    ( LODGING + POPULAR )
*/ 

.center {
    justify-content: space-between;
    display: flex;
    width: 100%;
    height: auto;
}

.lodging, .pop {
    padding: 27px 2% 27px 2%;
}

article {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    padding: 5px;
    border-radius: 20px;
    background-color: white;
}

.card {
    box-shadow: -2px 2px 10px  #c9c9c9;
    transform: translateX(0);
    transition: all 300ms ease-in-out;
}

.card:hover {
    transform: scale(1.05);
    box-shadow: 10px 10px 20px  #c9c9c9;
}

/*
*   LODGING
*/

.lodging {
    width: 66.6%;
    height: 100%;
}

.lodging-box {
    display: flex;
    flex-wrap: wrap;
    margin-left: -2%;
    padding: 0;
    width: 104%;
    justify-content: space-between;
}

.lodging .card {
    width: 30%;
    min-width: 280px;
    height: 250px;
    margin-left: 2%;
    margin-right: 2%;
    flex: 1 0 5%;
}

.lodging > a {
    width: fit-content;
    height: fit-content;
}

.lodging .card-img {
    width: 100%;
    height: 200px;
}

.lodging img {   
    width: 110%;
}

/*
*   POPULAR
*/

.pop {
    width: 33.3%;
    min-width: 350px;
    margin-left: 2%;
    padding-right: 2%;
    padding-left: 2%;
    padding-bottom: 0;
}

.pop-title {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.pop-title h1 {
    margin-left: 0;
}

.fa-chart-line {
    font-size: 25px;
}

.pop .card {
    width: 100%;
    height: 180px;
}

.pop .card-text {
    width: 62%;
    padding-left: 5px;
}

.pop .card-img {
    width: 38%;
    min-width: 130px;
    border-radius: 15px 0 0 15px;
}

.pop img {
    width: 200%;
}

.pop .ver-img {
    width: 100%;
}

.pop article {
    width: 100%;
    flex-direction: row;
    flex-wrap: nowrap;
}

/*
*   ACTIVITIES
*/

.act {
    height: 560px;
    margin-bottom: 100px;
    margin-top: 20px;
}

.act-box {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-between;
    align-content: space-between;
    margin-top: 10px;
    height: 100%;
}

.act-card--big {
    height: 100%;
}

.act-card--2 {
    height: 46%;
}

.act-card--3 {
    height: 35%;
}

.act-card--5 {
    height: 40%;
}

.act-card--6 {
    height: 42%;
}

.act .card {
    flex: auto;
    border-radius: 25px;
    width: 22%;
}

.act article {
    padding: 0;
    height: 100%;
    border-radius: 25px;
}

.act .card-img {
    width: 100%;
    height: auto;
}

.act .card-text {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    min-height: 50px;
    margin: 0px;
    padding: 0 0 0 15px;
}

.act img {
    min-height: 100%;
}

.act-card--big img {
    min-width: 750px;
}

.card, .card:hover {
    margin-bottom: 30px;
    border-radius: 20px;
    overflow: hidden;
}

.card-img {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 15px 15px 0 0;
    overflow: hidden;
}

.card-text {
    margin-top: 10px;
    margin-left: 10px;
    margin-bottom: 5px;
}

.card-title {
    margin: 0;
    font-size: 20px;
}

.pop .card-rating {
    position: absolute;
    bottom: 12px;
}

.fa-star {
    color: #0065FC;
}

/* 
* 
*  FOOTER
*
*/

footer {
    display: flex;
    justify-content: left;
    height: auto;
    width: 100%;
    padding: 40px 3% 40px 3%;
    margin: 0;
}

footer div {
    display: flex;
    flex-direction: column;
    width: 40%;
    align-content: center;
}

footer ul {
    flex-direction: column;
    width: 100%;
}

footer a, footer a:hover {
    margin-bottom: 10px;
}

footer a:hover {
    color: #777;
}

/*
*
*   TABLET
*
*/

@media screen and (max-width: 992px) {

    .lodging {
        width: 50%;
    }

    .lodging .card {
        width: 100%;
    }

    .lodging img {
        width: 110%;
    }

    section.pop {
        width: 50%;
    }

}

/*
*
*   MOBILE
*
*/

@media screen and (max-width: 768px) {
        
    header {
        flex-direction: column;
        justify-content: center;
        width: 100%;
        height: auto;
        margin: 0;
    }

    #logo {
        display: block;
        align-self: center;
        margin-left: 30px;
    }
    
    nav {
        width: 100%;
    }

    ul {
        width: 100%;
    }

    nav li {
        border-top: none;
        align-content: center;
        height: 100%;
        width: 50%;
        border-top: none;
        border-bottom: 2px white solid;
    }

    nav li:hover {
        border-top: none;
        border-bottom: 2px #0065FC solid;
    }
    
    nav a {
        padding: 20px;
        border-top: none;
        border-bottom: 2px white solid;
    }

    nav a:hover {
        padding: 20px;
        color: #0065FC;
    }

    main {
        margin-left: 0px;
        margin-right: 0px;
    }

    .search {
        padding-left: 20px;
        padding-right: 20px;
    }

    .search-input {
        width: 100%;
    }

    form {
        display: flex;
        justify-content: center;
        width: 100%;
    }

    .search-btn {
        border-radius: 15px;
        margin-left: -10px;
    }

    .search-btn-text {
        display: none;
    }

    i.search-btn-icon {
        display: inline-block;
    }

    .filter {
        flex-direction: column;
    }

    .info-icon {
        margin-right: 0px;
    }

    section {
        border-radius: unset;
    }

    .center {
        flex-direction: column-reverse;
        width: 100%;
    }

    #lodging, #pop, #act {
        width: 100%;
        height: auto;
        margin: 0;
        padding-left: 20px;
        padding-right: 20px;
    }
    
    .lodging {
        background-color: transparent;
        border-radius: unset;
    }

    .lodging-box {
        margin: 0;
        width: 100%;
    }

    .lodging .card {
        width: 100%;
        min-width: 100%;
        margin-left: 0;
    }

    .pop {
        min-width: unset;
    }

    .pop .card {
        height: 170px;
    }

    .pop img {
        width: 250%;
    }
    
    .pop .ver-img {
        width: 130%;
    }

    .act-box {
        flex-wrap: nowrap;
        width: 100%;
        height: 1380px;
    }

    .act .card {
        width: 100%;
        height: 200px;
    }

    .act .card-img {
        height: 170px;
    }

    .act img {
        width: 100%;
    }

    footer {
        flex-direction: column;
        width: 100%;
        max-height: 520px;
        padding-left: 20px;
        padding-right: 20px;
    }

    footer div {
        width: 100%;
    }
}

